--- a/package.json
+++ b/package.json
@@ -3,10 +3,40 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "private": "true",
+  "author": "Andrii Melnuchenko",
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "scripts": {
+    "test": "playwright test --config=playwright.config.ts --headed",
+    "test-all": "playwright test --browser=all",
+    "lint": "eslint --no-ignore --ext .js --ext .ts .",
+    "lint:write": "eslint --ext .js --ext .ts --fix",
+    "docker:base": "docker build -f Dockerfile --no-cache -t playwright .",
+    "docker:test": "docker container run --env browser=chromium --env env=all:qa playwright"
+  },
+  "lint-staged": {
+    "*.(js|ts)": [
+      "npm run lint:write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.13.0",
+    "@types/node": "^16.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "playwright": "^1.13.0",
+    "prettier": "2.3.2",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
+  }
 }
