--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run your tests
-        run: npm test-chrome
+        run: npm run test-chrome
