--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "scripts": {
         "pretest": "rm -rf ./allure-results ./allure-report ./test-results ./test-data",
         "test-chrome": "playwright test --config=chrome.playwright.config.ts --project=Chrome --grep @mainPage",
+        "test-iphone12": "playwright test --config=playwright.config.ts --project='Mobile Chrome' --grep @mobile",
         "test": "playwright test --config=playwright.config.ts",
         "test-all": "playwright test --browser=all",
         "lint": "eslint --no-ignore --ext .js --ext .ts .",
         "lint:write": "eslint --ext .js --ext .ts ./ --fix",
         "docker:base": "docker build -f Dockerfile --no-cache -t playwright .",
-        "docker:test": "docker container run --env browser=chromium --env env=all:qa playwright",
+        "docker:test": "docker run --rm npm ci && mpn run test-chrome",
         "allure-generate": "allure generate ./allure-results --clean",
         "allure-open": "allure serve"
     },
@@ -44,5 +45,8 @@
         "prettier": "2.3.2",
         "ts-node": "^10.1.0",
         "typescript": "^4.3.5"
+    },
+    "dependencies": {
+        "npx": "^10.2.2"
     }
 }
