--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
     "compilerOptions": {
-        "target": "ES2018",
+        "target": "ES2020",
+        "module": "ES2020",
         "moduleResolution": "node",
         "noUnusedLocals": false,
         "noUnusedParameters": true,
         "baseUrl": ".",
+        "lib": [
+            "es2019"
+        ],
         "paths": {
             "*": ["./*"],
             "@lib/*": ["src/*"],
